[gd_scene load_steps=4 format=3 uid="uid://c7wnfmneub2g8"]

[ext_resource type="Script" uid="uid://itih2hwvbl4o" path="res://base/main.gd" id="1_3xxnu"]
[ext_resource type="PackedScene" uid="uid://cwa6im4xrq58o" path="res://base/game.tscn" id="1_f47da"]
[ext_resource type="PackedScene" uid="uid://d0kejn0j1swl6" path="res://base/ui.tscn" id="1_wbdts"]

[node name="Main" type="Node2D"]
script = ExtResource("1_3xxnu")

[node name="Game" parent="." instance=ExtResource("1_f47da")]

[node name="UI" parent="." instance=ExtResource("1_wbdts")]
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="bg_changes" from="." to="Game" method="_on_main_bg_changes"]
[connection signal="npc_desapawn" from="." to="Game" method="_on_main_npc_desapawn"]
[connection signal="npc_spawn" from="." to="Game" method="_on_main_npc_spawn"]
[connection signal="character_selected" from="UI" to="." method="_on_ui_character_selected"]
